--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -58,12 +58,75 @@ div#logoBlock {
 .section-title {
   text-align: end;
 }
-
+.text {
+  background-color: white;
+  color: black;
+  /* font-size: 10vw; */
+  font-weight: bold;
+  margin: 0 auto;
+  padding: 10px;
+  /* width: 50%; */
+  text-align: center;
+  position: absolute;
+  /* top: 20%; */
+  left: 89%;
+  transform: translate(-50%, -50%);
+  mix-blend-mode: screen;
+}
+/* testing */
+#row-hero {
+  padding: 115px 0 200px;
+}
+#hero h1 {
+  font-size: 50px;
+  font-weight: bold;
+  color: white;
+}
+.buffer-top {
+  margin-top: 10px;
+}
+#hero p {
+  font-size: 16px;
+  line-height: 26px;
+}
+#hero p {
+  padding: 45px 0 18px;
+  margin-bottom: 20px;
+}
+.fadein-fast {
+  -webkit-animation: a 2s;
+  animation: a 2s;
+}
+p {
+  color: #fff;
+  line-height: 26px;
+  font-size: 14px;
+  padding-top: 25px;
+  padding-bottom: 25px;
+}
+.btn {
+  font-size: 16px;
+  font-weight: 700;
+  color: #fff;
+  text-decoration: none;
+  padding: 18px 26px;
+  border-radius: 3px;
+  margin-right: 10px;
+  display: inline-block;
+}
+.btn.btn-freelance {
+  background: #f04;
+}
+.btn.btn-hire {
+  background: hsla(0, 0%, 100%, 0.14);
+}
+/* end testing */
 #home {
   background-color: #232323;
   background-image: url("/static/images/paint-splatter-1.png");
   background-repeat: no-repeat;
   background-position: right;
+  text-align: center;
 }
 #projects {
   background-color: #323232;
@@ -165,4 +228,8 @@ div#logoBlock {
 .form-container {
   border: 1px solid white;
   width: 80vw;
+  justify-content: space-evenly;
+  display: flex;
+  flex-flow: wrap;
+  margin: auto;
 }
