--- a/templates/home.html
+++ b/templates/home.html
@@ -18,12 +18,12 @@
         </p>
         <div class="callToAction">
           <a
-            href="http://goo.gl/forms/gYi9a11a7U"
+            href="https://forms.gle/28dtTY4zpJwyR2ms5"
             target="_blank"
             class="btn btn-freelance"
             >I need a website<span class="icon-chevron-right"></span
           ></a>
-          <a href="#contact" target="_blank" class="btn btn-hire"
+          <a href="mailto:me@company.com" target="_blank" class="btn btn-hire"
             >I'm looking to hire<span class="icon-chevron-right"></span
           ></a>
         </div>
@@ -72,76 +72,7 @@
 <div class="section-container" id="contact">
   <h1 class="section-title text">Contact</h1>
 
-  <div class="form-container">
-    <form action="https://formspree.io/deandrevidal@aol.com" method="POST">
-      <div class="control">
-        <input class="input" type="text" placeholder="Full Name" name="name" />
-      </div>
-      <div class="control">
-        <input class="input" type="email" placeholder="Email" name="email" />
-      </div>
-      <div class="field">
-        <label class="label">Subject</label>
-        <div class="control">
-          <div class="select">
-            <select>
-              <option>Consultation</option>
-              <option>Website: Function</option>
-              <option>Website: Design</option>
-              <option>Bug Review</option>
-              <option>Major Project</option>
-              <option>Writing</option>
-              <option>Art</option>
-            </select>
-          </div>
-        </div>
-      </div>
-      <div class="field">
-        <label class="label">Time Frame</label>
-        <div class="control">
-          <div class="select">
-            <select>
-              <option> >1 Week </option>
-              <option>1-2 Weeks Function</option>
-              <option>3-4 Weeks </option>
-              <option>1 Month</option>
-              <option>1-3 Months</option>
-              <option>3-6 Months</option>
-              <option>Undetermined</option>
-            </select>
-          </div>
-        </div>
-      </div>
-      <div class="field has-addons">
-        <p class="control">
-          <span class="select">
-            <select>
-              <option>$</option>
-              <option>£</option>
-              <option>€</option>
-            </select>
-          </span>
-        </p>
-        <p class="control">
-          <input
-            class="input"
-            type="text"
-            placeholder="Budget"
-            class="budget"
-          />
-        </p>
-      </div>
-      <div class="control">
-        <input
-          class="textarea"
-          type="textarea"
-          placeholder="Description"
-          name="content"
-        />
-      </div>
-      <input type="submit" value="Send" />
-    </form>
-  </div>
+  <div class="form-container"></div>
 </div>
 
 {% endblock %}
