--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="/static/css/styles.css" type="text/css" />
     <link
       rel="stylesheet"
@@ -12,9 +18,7 @@
     <title>Digi-Daemon</title>
   </head>
   <body>
-    <div id="header_bg" class="col100">
-      <!-- end nav menu block -->
-    </div>
+    <div id="header_bg" class="col100"></div>
     <div class="header">
       <div id="logoBlock">
         <a id="logo" href="/">Luke H</a>
@@ -38,6 +42,30 @@
       </nav>
     </div>
     {% block body %} {% endblock %}
+    <!-- <footer class="">
+      <div class="social">
+        <a href="#"><i class="fab fa-github-square"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-angellist"></i></a>
+        <a href="#"><i class="fas fa-yin-yang"></i></a>
+      </div>
+    </footer>
+    <div id="footer_bg_1" class="col100"></div>
+    <div id="footer_bg_2" class="col100"></div> -->
+    <footer>
+      <div class="social">
+        <a href="#"><i class="fab fa-github-square"></i></a>
+        <a href="#"><i class="fab fa-linkedin"></i></a>
+        <a href="#"><i class="fab fa-angellist"></i></a>
+        <a href="#"><i class="fas fa-yin-yang"></i></a>
+      </div>
+      <div>
+        <p>
+          © 2006 – 2019 Kilian Valkhof. Articles available for redistribution
+          under <a href="/licence">licence</a>.
+        </p>
+      </div>
+    </footer>
     <script
       defer
       src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
