--- a/templates/home.html
+++ b/templates/home.html
@@ -23,7 +23,10 @@
             class="btn btn-freelance"
             >I need a website<span class="icon-chevron-right"></span
           ></a>
-          <a href="mailto:me@company.com" target="_blank" class="btn btn-hire"
+          <a
+            href="mailto:luke@hackthehood.org"
+            target="_blank"
+            class="btn btn-hire"
             >I'm looking to hire<span class="icon-chevron-right"></span
           ></a>
         </div>
