--- a/templates/layout.html
+++ b/templates/layout.html
@@ -61,8 +61,7 @@
       </div>
       <div>
         <p>
-          © 2006 – 2019 Kilian Valkhof. Articles available for redistribution
-          under <a href="/licence">licence</a>.
+          ©2019 Designed and coded by Luke Harrison.
         </p>
       </div>
     </footer>
