--- a/templates/home.html
+++ b/templates/home.html
@@ -39,27 +39,44 @@
   <h1 class="section-title text">Projects</h1>
   <div class="projects-container">
     <div class="project-box">
-      <h1 class="project-title">Placeholder</h1>
-      <div class="project-img image is-16by9"></div>
+      <h1 class="project-title">Oh My Quad</h1>
+      <div class="project-img image is-16by9">
+        <video autoplay muted loop class="myVideo">
+          <source src="/static/images/ohmyquad.mov" type="video/mp4" />
+        </video>
+      </div>
 
       <!-- maybe use icons here -->
       <p class="project-links">[<a href="#">Github</a>][<a href="#">App</a>]</p>
     </div>
 
     <div class="project-box">
-      <h1 class="project-title">Placeholder</h1>
-      <div class="project-img image is-16by9"></div>
+      <h1 class="project-title">LineTime</h1>
+      <div class="project-img image is-16by9">
+        <video autoplay muted loop class="myVideo">
+          <source src="/static/images/LineTime.mov" type="video/mp4" />
+        </video>
+      </div>
 
       <!-- maybe use icons here -->
       <p class="project-links">[<a href="#">Github</a>][<a href="#">App</a>]</p>
     </div>
 
     <div class="project-box">
-      <h1 class="project-title">Placeholder</h1>
-      <div class="project-img image is-16by9"></div>
+      <h1 class="project-title">Slayfarer</h1>
+      <div class="project-img image is-16by9">
+        <video autoplay muted loop class="myVideo">
+          <source src="/static/images/slayfarer.mov" type="video/mp4" />
+        </video>
+      </div>
 
       <!-- maybe use icons here -->
-      <p class="project-links">[<a href="#">Github</a>][<a href="#">App</a>]</p>
+      <p class="project-links">
+        [<a href="#">Github</a>][<a
+          href="https://ga-project-02.firebaseapp.com/"
+          >App</a
+        >]
+      </p>
     </div>
 
     <div class="project-box">
@@ -73,9 +90,10 @@
 </div>
 <hr class="section-divider" />
 <div class="section-container" id="contact">
-  <h1 class="section-title text">Contact</h1>
-
-  <div class="form-container"></div>
+  <h1 class="section-title text">Current Project</h1>
+  <div class="most-recent">
+    brawlr images go here
+  </div>
 </div>
 
 {% endblock %}
