--- a/templates/home.html
+++ b/templates/home.html
@@ -89,10 +89,13 @@
   </div>
 </div>
 <hr class="section-divider" />
-<div class="section-container" id="contact">
+<div class="section-container" id="recent">
   <h1 class="section-title text">Current Project</h1>
-  <div class="most-recent">
-    brawlr images go here
+  <div>
+    <video autoplay muted loop class="myVideo most-recent">
+      <source src="/static/images/grapplr.mov" type="video/mp4" />
+    </video>
+    <div class="recent-container"></div>
   </div>
 </div>
 
