--- a/templates/layout.html
+++ b/templates/layout.html
@@ -37,7 +37,7 @@
           <a href="/Lukaz">About</a>
         </div>
         <div class="nav-item column is-one-fourth">
-          <a href="/#contact">Contact</a>
+          <a href="/#recent">Current Project</a>
         </div>
       </nav>
     </div>
