--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -295,3 +295,21 @@ video.myVideo {
   flex-flow: wrap;
   margin: auto;
 }
+
+.recent-container {
+  background-image: url(/static/images/IPhone_X.png);
+  background-repeat: no-repeat;
+  margin: auto;
+  z-index: 900;
+  background-size: contain;
+  /* max-height: 25vh; */
+  height: 70vh;
+  position: relative;
+  background-position: center;
+  margin-top: -70vh;
+}
+video.myVideo.most-recent {
+  border-radius: 10%;
+  height: 70vh;
+  max-height: 70vh;
+}
