--- a/templates/layout.html
+++ b/templates/layout.html
@@ -54,9 +54,15 @@
     <div id="footer_bg_2" class="col100"></div> -->
     <footer>
       <div class="social">
-        <a href="#"><i class="fab fa-github-square"></i></a>
-        <a href="#"><i class="fab fa-linkedin"></i></a>
-        <a href="#"><i class="fab fa-angellist"></i></a>
+        <a href="https://github.com/LukazDane/"
+          ><i class="fab fa-github-square"></i
+        ></a>
+        <a href="https://www.linkedin.com/in/lukazdane/"
+          ><i class="fab fa-linkedin"></i
+        ></a>
+        <a href="https://angel.co/luke-harrison-4"
+          ><i class="fab fa-angellist"></i
+        ></a>
         <a href="#"><i class="fas fa-yin-yang"></i></a>
       </div>
       <div>
