--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,13 @@
       </div>
 
       <!-- maybe use icons here -->
-      <p class="project-links">[<a href="#">Github</a>][<a href="#">App</a>]</p>
+      <p class="project-links">
+        [<a href="https://github.com/trrstnn/Project-3-OhMyQuad">Github</a>][<a
+          href="#"
+          class="not-active"
+          >App</a
+        >]
+      </p>
     </div>
 
     <div class="project-box">
@@ -59,7 +65,13 @@
       </div>
 
       <!-- maybe use icons here -->
-      <p class="project-links">[<a href="#">Github</a>][<a href="#">App</a>]</p>
+      <p class="project-links">
+        [<a href="https://github.com/LukazDane/LineTime">Github</a>][<a
+          href="#"
+          class="not-active"
+          >App</a
+        >]
+      </p>
     </div>
 
     <div class="project-box">
@@ -72,20 +84,23 @@
 
       <!-- maybe use icons here -->
       <p class="project-links">
-        [<a href="#">Github</a>][<a
-          href="https://ga-project-02.firebaseapp.com/"
-          >App</a
-        >]
+        [<a href="https://github.com/teknoformula/project-02-with-firebase"
+          >Github</a
+        >][<a href="https://ga-project-02.firebaseapp.com/">App</a>]
       </p>
     </div>
 
-    <div class="project-box">
+    <!-- <div class="project-box">
       <h1 class="project-title">Placeholder</h1>
       <div class="project-img image is-16by9"></div>
-
-      <!-- maybe use icons here -->
-      <p class="project-links">[<a href="#">Github</a>][<a href="#">App</a>]</p>
-    </div>
+      <p class="project-links">
+        [<a href="#" class="not-active">Github</a>][<a
+          href="#"
+          class="not-active"
+          >App</a
+        >]
+      </p>
+    </div> -->
   </div>
 </div>
 <hr class="section-divider" />
