--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,28 @@
 {% extends 'layout.html' %} {% block body %}
 <div class="section-container">
-  <h1 class="section-title">About Me</h1>
+  <div class="abt">
+    <div class="abt-img"></div>
+    <div class="text-container">
+      <h1>About Me</h1>
+      <p>
+        My name is Lukaz. I'm a mix between a musician, an activist, an artist,
+        and a programmer. Originally from a small town in Louisiana, I moved to
+        California a few years ago to follow my passion for tech. I began
+        working with tech & communtiy focused non-profits in Oakland and quickly
+        realized the need for me to improve my programming skills and
+        familiarity with the Bay's tech industry. I have always loved solving
+        problems and and seeing how tech changes the world around us. I have
+        years of customer support and management experiences that I can bring to
+        the table, as well as my skills with web development. My willingness to
+        learn and thirst for knowledge spurs me on to keep learning more and
+        more about current and emerging tech. Recently I attended a full-stack
+        web immersive program at General Assembly in San Francisco. Here I built
+        full-stack web applications, had the opportunity to learn new skills,
+        hone and improve others, and work within a team. I'm always excited to
+        take on a project and can't wait to see what the future holds for myself
+        and for the tech industry as a whole!
+      </p>
+    </div>
+  </div>
 </div>
 {% endblock %}
