added ohmyquad link

--- a/templates/home.html
+++ b/templates/home.html
@@ -49,8 +49,7 @@
       <!-- maybe use icons here -->
       <p class="project-links">
         [<a href="https://github.com/trrstnn/Project-3-OhMyQuad">Github</a>][<a
-          href="#"
-          class="not-active"
+          href="https://ohmyquad.herokuapp.com/login"
           >App</a
         >]
       </p>
