--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,6 @@
 <hr class="section-divider" />
 <div class="section-container" id="projects">
   <div class="projects-container">
-
     <div class="card" style="width: 18rem;">
       <video autoplay muted loop class="myVideo card-img-top">
         <source src="/static/images/ohmyquad.mov" type="video/mp4" />
@@ -37,20 +36,16 @@
     </div>
   </div>
 
-  <div class="project-box">
-    <h1 class="project-title">LineTime</h1>
-    <div class="project-img image is-16by9">
-      <video autoplay muted loop class="myVideo">
-        <source src="/static/images/LineTime.mov" type="video/mp4" />
-      </video>
+  <div class="card" style="width: 18rem;">
+    <video autoplay muted loop class="myVideo">
+      <source src="/static/images/LineTime.mov" type="video/mp4" />
+    </video>
+    <div class="card-body">
+      <h5 class="card-title">LineTime</h5>
+      <a href="https://github.com/LukazDane/LineTime">Github</a>
+      <a href="#" class="not-active">App</a>
     </div>
-
-    <!-- maybe use icons here -->
-    <p class="project-links">
-      [<a href="https://github.com/LukazDane/LineTime">Github</a>][<a href="#" class="not-active">App</a>]
-    </p>
   </div>
-
   <div class="project-box">
     <h1 class="project-title">Slayfarer</h1>
     <div class="project-img image is-16by9">
