--- a/templates/home.html
+++ b/templates/home.html
@@ -31,57 +31,40 @@
       <div class="card-body">
         <h5 class="card-title">Oh My Quad</h5>
         <a class="btn btn-primary" href="https://github.com/trrstnn/Project-3-OhMyQuad">Github</a>
-        <a class="btn btn-primary" href="https://ohmyquad.herokuapp.com/login">App</a>
+        <!-- <a class="btn btn-primary" href="https://ohmyquad.herokuapp.com/login">App</a> -->
+      </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+      <video autoplay muted loop class="myVideo card-img-top">
+        <source src="/static/images/LineTime.mov" type="video/mp4" />
+      </video>
+      <div class="card-body">
+        <h5 class="card-title">LineTime</h5>
+        <a class="btn btn-primary" href="https://github.com/LukazDane/LineTime">Github</a>
+        <!-- <a class="btn btn-primary" href="#" class="not-active">App</a> -->
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <video autoplay muted loop class="myVideo card-img-top">
+        <source src="/static/images/slayfarer.mov" type="video/mp4" />
+      </video>
+      <div class="card-body">
+        <h5 class="card-title">Slayfarer</h5>
+        <a class="btn btn-primary" href="https://github.com/teknoformula/project-02-with-firebase">Github</a>
+        <a class="btn btn-primary" href="https://ga-project-02.firebaseapp.com/">App</a>
       </div>
     </div>
   </div>
 
-  <div class="card" style="width: 18rem;">
-    <video autoplay muted loop class="myVideo">
-      <source src="/static/images/LineTime.mov" type="video/mp4" />
-    </video>
-    <div class="card-body">
-      <h5 class="card-title">LineTime</h5>
-      <a href="https://github.com/LukazDane/LineTime">Github</a>
-      <a href="#" class="not-active">App</a>
-    </div>
-  </div>
-  <div class="project-box">
-    <h1 class="project-title">Slayfarer</h1>
-    <div class="project-img image is-16by9">
-      <video autoplay muted loop class="myVideo">
-        <source src="/static/images/slayfarer.mov" type="video/mp4" />
+  <hr class="section-divider" />
+  <div class="section-container" id="recent">
+    <div>
+      <video autoplay muted loop class="myVideo most-recent">
+        <source src="/static/images/grapplr.mov" type="video/mp4" />
       </video>
+      <div class="recent-container"></div>
     </div>
-
-    <!-- maybe use icons here -->
-    <p class="project-links">
-      [<a href="https://github.com/teknoformula/project-02-with-firebase">Github</a>][<a
-        href="https://ga-project-02.firebaseapp.com/">App</a>]
-    </p>
   </div>
 
-  <!-- <div class="project-box">
-      <h1 class="project-title">Placeholder</h1>
-      <div class="project-img image is-16by9"></div>
-      <p class="project-links">
-        [<a href="#" class="not-active">Github</a>][<a
-          href="#"
-          class="not-active"
-          >App</a
-        >]
-      </p>
-    </div> -->
-</div>
-</div>
-<hr class="section-divider" />
-<div class="section-container" id="recent">
-  <div>
-    <video autoplay muted loop class="myVideo most-recent">
-      <source src="/static/images/grapplr.mov" type="video/mp4" />
-    </video>
-    <div class="recent-container"></div>
-  </div>
-</div>
-
-{% endblock %}
+  {% endblock %}
